tests/ui/binop/binop-mul-i32-f32.stderr
error[E0277]: cannot multiply `i32` by `f32`
  --> $DIR/binop-mul-i32-f32.rs:2:7
   |
LL |     x * y
   |       ^ no implementation for `i32 * f32`
   |
   = help: the trait `Mul<f32>` is not implemented for `i32`
help: the following other types implement trait `Mul<Rhs>`
  --> $SRC_DIR/core/src/ops/arith.rs:LL:COL
   |
   = note: `i32` implements `Mul`
  ::: $SRC_DIR/core/src/ops/arith.rs:LL:COL
   |
   = note: in this macro invocation
  --> $SRC_DIR/core/src/internal_macros.rs:LL:COL
   |
   = note: `&i32` implements `Mul<i32>`
  ::: $SRC_DIR/core/src/internal_macros.rs:LL:COL
   |
   = note: `i32` implements `Mul<&i32>`
  ::: $SRC_DIR/core/src/internal_macros.rs:LL:COL
   |
   = note: `&i32` implements `Mul`
   = note: this error originates in the macro `mul_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
